表示やらデータ形式やらの一元管理をしようとした

--- a/Astar.vcxproj.filters
+++ b/Astar.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="Astar.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="AstarSetup.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Astar.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="AstarSetup.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
