--- a/setup.ini
+++ b/setup.ini
@@ -1,13 +1,13 @@
-[SCREEN]
-Width = 1280			;ウィンドウの幅
-Height = 720			;ウィンドウの高さ
-Caption = "サンプルゲーム"
+[ATTRIBUTE_STR]
+floor = "　"
+wall  = "■"
+path  = "□"
+start = "Ｓ"
+end   = "Ｅ"
 
+[MAP_CHAR_FORMAT]
+wall = 1
+floor= 0
 
-[GAME]
-Fps = 60;			;フレームレート
-
-
-[DEBUG]			;Release時はすべて無効
-ViewFps = 1;			;現在のFPSを表示するか
-ViewCollider = 0;		;コリジョン範囲を表示するか
+[DEBUG_COLOR]
+red =
